EIP1-7057: No signature implementation
