# src/main/kotlin/uk/gov/dluhc/notificationsapi/database/entity/NotificationType.kt
@@ -9,5 +9,6 @@ enum class NotificationType {
     ID_DOCUMENT_REQUIRED,
     REJECTED_DOCUMENT,
     REJECTED_SIGNATURE,
+    REQUESTED_SIGNATURE,
     NINO_NOT_MATCHED
 }
