# src/main/kotlin/uk/gov/dluhc/notificationsapi/dto/NotificationType.kt
@@ -30,5 +30,6 @@ enum class NotificationType {
     REJECTED_DOCUMENT,
     REJECTED_SIGNATURE,
     REJECTED_SIGNATURE_WITH_REASONS,
+    REQUESTED_SIGNATURE,
     NINO_NOT_MATCHED
 }
